...
            android:contentDescription="@string/descr_city_park"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/park_achtergrond"
            tools:srcCompat="@drawable/park_achtergrond" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/screen_new_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageButton
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.28" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_details_audio"
                style="@style/arrow_style"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/description_addAudio"
                android:onClick="@{() -> eventViewModel.onAudioButtonClicked()}"
                android:text="@string/description_addAudio"
                app:icon="@drawable/ic_micro"
                app:layout_constraintEnd_toStartOf="@+id/guide_center_pole"
                app:layout_constraintTop_toBottomOf="@+id/guide_top_pole" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_details_camera"
                style="@style/arrow_style"
                android:contentDescription="@string/description_addPhoto"
                android:onClick="@{() -> eventViewModel.onCameraButtonClicked()}"
                android:text="@string/description_addPhoto"
                app:icon="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="@+id/btn_event_details_audio"
                app:layout_constraintStart_toStartOf="@+id/btn_event_details_audio"
                app:layout_constraintTop_toBottomOf="@+id/btn_event_details_audio" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_details_drawing"
                style="@style/arrow_style"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/description_addDrawing"
                android:onClick="@{() -> eventViewModel.onDrawingButtonClicked()}"
                android:text="@string/description_addDrawing"
                app:icon="@drawable/ic_tekenen"
                app:layout_constraintStart_toEndOf="@+id/guide_center_pole"
                app:layout_constraintTop_toTopOf="@+id/btn_event_details_audio" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_details_text"
                style="@style/arrow_style"
                android:contentDescription="@string/description_addText"
                android:onClick="@{() -> eventViewModel.onTextButtonClicked()}"
                android:text="@string/description_addText"
                app:icon="@drawable/ic_schrijven"
                app:layout_constraintEnd_toEndOf="@+id/btn_event_details_drawing"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.83" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_event_details_details"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rv_background"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/guide_recyclerview_end"
...
