...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/save_event_title"
                        app:layout_constraintVertical_weight="1"
                        app:startIconDrawable="@drawable/ic_titel">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txt_save_event_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:nextFocusDown="@+id/txt_save_event_notes"
                            android:text="@={eventViewModel.eventTitle}">

                            <requestFocus />
                        </com.google.android.material.textfield.TextInputEditText>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayout_notes"
                        style="@style/faith_textInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:hint="@string/hier_kan_je_de_notities_kwijt"
                        app:layout_constraintBottom_toTopOf="@+id/btn_save_event_save"
                        app:layout_constraintEnd_toEndOf="@+id/textInputLayout_eventtitle"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="@+id/textInputLayout_eventtitle"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_eventtitle"
                        app:startIconDrawable="@drawable/ic_notities">

...
