<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/screen_take_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_backpack">

        <VideoView
            android:id="@+id/video"
...
