...

        <import type="android.graphics.Color" />

    </data>

    <FrameLayout
        android:id="@+id/screen_draw_avatar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--ACHTERGROND-->

        <androidx.constraintlayout.widget.ConstraintLayout
...
