...

            <ImageButton
                android:id="@+id/btn_enter_text_save"
                android:layout_width="@dimen/material_icon_width"
                android:layout_height="@dimen/material_icon_height"
...

                    <ImageView
                        android:id="@+id/btn_enter_text_setBold"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
...

                    <ImageView
                        android:id="@+id/btn_enter_text_setItalic"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
...

                    <ImageView
                        android:id="@+id/btn_enter_text_setUnderline"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
...

                    <ImageView
                        android:id="@+id/btn_enter_text_setFontLarge"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
...

                    <ImageView
                        android:id="@+id/btn_enter_text_setFontNormal"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
...

                    <ImageView
                        android:id="@+id/btn_enter_text_setFontSmall"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
...

                        <ImageView
                            android:id="@+id/btn_enter_text_setColorBlack"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
...

                        <ImageView
                            android:id="@+id/btn_enter_text_setColorBlue"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
...

                        <ImageView
                            android:id="@+id/btn_enter_text_setColorRed"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
...

                        <ImageView
                            android:id="@+id/btn_enter_text_setColorYellow"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
...

                        <ImageView
                            android:id="@+id/btn_enter_text_setColorGreen"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
...
