...
    <string name="getLoggedInUser_error">Er ging iets fout bij het ophalen van de gebruiker.</string>
    <string name="error_no_credentials">No credentials have been stored</string>
    <string name="msg_naar_de_stad">Naar de stad</string>
    <string name="msg_registreer">Ik ben nieuw</string>
    <string name="avatar_zittend">avatar zittend</string>
    <string name="avatar_inkleuren">avatar inkleuren</string>
    <string name="editor">editor</string>
    <string name="tekenen">tekenen</string>
    <string name="choose_underline">kies onderlijnd</string>
    <string name="choose_italic">kies cursief</string>
    <string name="choose_bold">kies vetjes</string>
    <string name="take_photo_de_foto">de foto</string>
    <string name="take_photo_neem_foto">neem foto</string>
...
