<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
                name="mainScreenViewModel"
                type="be.hogent.faith.faith.mainScreen.MainScreenViewModel"/>
    </data>

    <FrameLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <!--ACHTERGROND-->
        <ImageView
                android:layout_width="match_parent"
                android:background="@drawable/stad"
                android:layout_height="match_parent"
                android:contentDescription="@string/frag_main_descr_city_plan"/>
        <!--AVATAR -->
        <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/image_main_avatar"
                android:src="@drawable/meisje"
                android:layout_height="wrap_content"
                android:contentDescription="@string/frag_main_descr_your_avatar"/>

        <!-- KNOPPEN -->
        <!-- Invisible to make it transparent -->
        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="#00000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <View
                    android:layout_width="0dp"
                    android:id="@+id/main_start_location"
                    android:layout_height="0dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <!--Every button is set by using two intersecting guidelines.
                The top left corner of the button is located at the intersection.
                It might be better to use four guidelines so that we get 2 points (top-left and bottom-right),
                and let the Views decide their dimensions solely through their constrains.
                This will however produce a large amount of Guidelines.

                Why use guidelines, and not a kind of map? Because maps inherently use pixels, and those won't work
                on screens of different resolutions. Guidelines can be set using percentages which will scale with
                the device.-->
            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="8dp"
                    android:layout_height="12dp"
                    android:id="@+id/guide_loc1_left"
                    app:layout_constraintGuide_percent="0.11"
                    android:orientation="vertical"/>

            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="8dp"
                    android:layout_height="12dp"
                    android:id="@+id/guide_loc1_top"
                    app:layout_constraintGuide_percent="0.38"
                    android:orientation="horizontal"/>

            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="8dp"
                    android:layout_height="12dp"
                    android:id="@+id/guide_loc1_right"
                    app:layout_constraintGuide_percent="0.35"
                    android:orientation="vertical"/>

            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="8dp"
                    android:layout_height="12dp"
                    android:id="@+id/guide_loc1_bottom"
                    app:layout_constraintGuide_percent="0.57"
                    android:orientation="horizontal"/>

            <View
                    android:layout_width="0dp"
                    android:id="@+id/main_first_location"
                    android:onClick="@{() -> mainScreenViewModel.firstLocationClicked()}"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="@+id/guide_loc1_left"
                    app:layout_constraintEnd_toStartOf="@id/guide_loc1_right"
                    app:layout_constraintBottom_toTopOf="@id/guide_loc1_bottom"
                    app:layout_constraintTop_toTopOf="@+id/guide_loc1_top"/>

            <View
                    android:layout_width="0dp"
                    android:id="@+id/main_third_location"
                    android:onClick="@{() -> mainScreenViewModel.thirdLocationClicked()}"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="@+id/guide_loc2_right"
                    app:layout_constraintBottom_toTopOf="@id/guide_loc1_bottom"
                    app:layout_constraintTop_toTopOf="@+id/guide_loc1_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>

            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="8dp"
                    android:layout_height="12dp"
                    android:id="@+id/guide_loc2_left"
                    app:layout_constraintGuide_percent="0.39"
                    android:orientation="vertical"/>

            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="8dp"
                    android:layout_height="12dp"
                    android:id="@+id/guide_loc2_top"
                    app:layout_constraintGuide_percent="0.64"
                    android:orientation="horizontal"/>

            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="8dp"
                    android:layout_height="12dp"
                    android:id="@+id/guide_loc2_right"
                    app:layout_constraintGuide_percent="0.64"
                    android:orientation="vertical"/>

            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="8dp"
                    android:layout_height="12dp"
                    android:id="@+id/guide_loc2_bottom"
                    app:layout_constraintGuide_percent="0.85"
                    android:orientation="horizontal"/>

            <View
                    android:layout_width="0dp"
                    android:background="#00000000"
                    android:layout_height="0dp"
                    android:id="@+id/main_second_location"
                    android:onClick="@{() -> mainScreenViewModel.secondLocationClicked()}"
                    app:layout_constraintStart_toStartOf="@+id/guide_loc2_left"
                    app:layout_constraintEnd_toStartOf="@id/guide_loc2_right"
                    app:layout_constraintBottom_toTopOf="@id/guide_loc2_bottom"
                    app:layout_constraintTop_toTopOf="@+id/guide_loc2_top"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>