...
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:elevation="@dimen/panel_corner_radius"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/panel_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_takePhoto_Ok_Save"
            app:layout_constraintStart_toEndOf="@+id/btn_takePhoto_cancel"
            app:layout_constraintTop_toTopOf="parent">

            <io.fotoapparat.view.CameraView
                android:id="@+id/cameraView"
                android:layout_width="match_parent"
...
            android:contentDescription="@string/cancel"
            android:onClick="@{() -> photoViewModel.onCancelClicked()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_takePhoto_takePhoto"
            android:layout_width="@dimen/material_icon_width"
            android:layout_height="@dimen/material_icon_height"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_take_picture"
            android:contentDescription="@string/take_photo_neem_foto"
            android:onClick="@{() -> photoViewModel.onTakePhotoButtonClicked()}"
...
